...
  String get verifyHuman => 'Verify you are human';

  @override
  String get continueText => 'Continue';

  @override
  String get done => 'Done';

  @override
  String get requiredField => 'This field is required';

  @override
  String get invalidDate => 'Invalid date';
...
